--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: your awesome title
+title: Bridge
 page-title: your awesome page-title.
 home-title: your awesome home-title.
 description: description
