--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 关于我
-page-title: aboutMe
-home-title: Show you about me.
+title: About me
+page-title: 零策
+home-title: Chiven Young
 description:
 ---
 
