--- a/awaken.html
+++ b/awaken.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Awaken
+title: 觉
 page-title: 零策
-home-title: Awaken
-description:哲学
+home-title: Chiven Young
+description:
 ---
 
 {% include header.html %}
