--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Bridge
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+page-title: Be a simple person.
+home-title: Chiven Young
+description: 探索 创造 进化
 ---
 
 {% include header.html %}
